# everything-program-management

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  RULES.md  SECURITY.md  SOUL.md  WORKING-CONTEXT.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: chief-of-staff-brief.md  executive-summary.md  risk-triage.md  stakeholder-mapper.md
commands/: charter.md  decision-memo.md  exec-brief.md  mece.md  pm-brief.md  post-mortem.md  postmortem.md  pyramid.md  raid-update.md  risk-triage.md  stakeholder-map.md
contexts/: crisis-mode.md  executive-mode.md  pm-mode.md
docs/: METHODOLOGY.md  MULTI-HARNESS.md  PUBLIC_RELEASE_CHECKLIST.md  QUICKSTART.md  public-release-checklist.md
docs/releases/: v0.1.0.md
examples/: README.md  sample-input.md  sample-output.md
examples/charters/: charter-japan-launch-2026.md  project-charter-before.md
examples/data/: decision-memo.md  raid-row.json
examples/decisions/: DM-0001-japan-launch-pause.md
examples/raid/: raid-log-voxos-china.md
rules/common/: blameless-postmortem.md  cite-the-method.md  decisions.md  exec-clarity.md  mece-before-lists.md  no-buried-lede.md  one-page-exec-brief.md  pyramid-first.md  risk.md  two-options-or-explicit.md  writing.md
schemas/: decision-memo-frontmatter.json  decision-memo-frontmatter.schema.json  post-mortem-template.json  raid-row.json  raid-row.schema.json
scripts/: decision_journal_review.py  raid_cli.py
skills/chief-of-staff-brief/: SKILL.md
templates/: decision-memo.md  executive-brief.md  project-charter.md  raid-log.csv  raid-log.md  stakeholder-map.md  steering-brief.md
tests/: test_pmkit.py  test_public_examples.py  test_raid_cli.py  test_validators.py
(+20 files in other folders)
